Correction of viewport problem on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,13 @@
 /* src/styles/global.css */
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;1,500;1,600;1,700&family=Roboto:wght@400;700&display=swap');
 
+html, body {
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+  width:100%;
+}
+
 
 @tailwind base;
 
